[package]
name = "cypher_validator"
version = "0.9.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_cypher_validator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
pest = "2.8"
pest_derive = "2.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = "0.9"
rayon = "1"
